--- a/nodeJS3pam/package.json
+++ b/nodeJS3pam/package.json
@@ -1,10 +1,9 @@
 {
   "name": "nodejs3pam",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "watch":"nodemon app.js"
+    "watch": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +13,6 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
-  }
+  },
+  "description": ""
 }
